# Curseforge-Pack-Downloader

./: .gitignore  Cargo.toml  README.MD  env.ini
curseforge-pack-downloader-app/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
curseforge-pack-downloader-app/src/: main.tsx
curseforge-pack-downloader-app/src-tauri/: 2  Cargo.toml  tauri.conf.json
curseforge-pack-downloader-app/src-tauri/capabilities/: default.json
curseforge-pack-downloader-app/src-tauri/src/: curseforge_api.rs  env.rs  lib.rs  main.rs
curseforge-pack-downloader-app/src/assets/components/: Navigation.tsx  PackItemComponent.tsx  PackVersionSelectModal.tsx
curseforge-pack-downloader-app/src/assets/components/Extends/: OInput.tsx
curseforge-pack-downloader-app/src/assets/images/: curseforge_logo.svg.tsx
curseforge-pack-downloader-app/src/assets/pages/: Home.tsx
curseforge-pack-downloader-app/src/assets/scss/: index.scss
curseforge-pack-downloader-app/src/assets/ts/: ModSearchResult.ts  curseforge.ts  modpack_version_file.ts
curseforge_pack_downloader/: Cargo.toml
curseforge_pack_downloader/src/: curseforge_api.rs  lib.rs  mod_file.rs  mod_type.rs  modpack_version_file.rs  pack_archive.rs  pack_manifest.rs  project_structure.rs
curseforge_pack_downloader_cli/: Cargo.toml  build.rs  curseforge_pack_downloader_cli.ps1
curseforge_pack_downloader_cli/src/: commandline_args.rs  env.rs  main.rs
src/: commandline_args.rs  curseforge_api.rs  env.rs  main.rs  mod_file.rs  mod_type.rs  pack_archive.rs  pack_manifest.rs
