[package]
name = "unfuck-curseforge"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133" }
zip = { version = "2.2.1" }
clap = { version = "4.5.21", features = ["derive", "wrap_help", "help", "usage", "suggestions", "color", "error-context", "string"] }