[package]
name = "unfuck-curseforge"
version = "0.1.1"
edition = "2021"
build = "build.rs"  # Add this line

[dependencies]
log = "0.4.22"
env_logger = "0.11.5"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133" }
zip = { version = "2.2.1" }
clap = { version = "4.5.21", features = ["derive", "wrap_help", "help", "usage", "suggestions", "color", "error-context", "string"] }

tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"
md-5 = { version = "0.11.0-pre.4" }
uri_encode = {version = "1.0.2"}
include_dir = {version = "0.7.4"}