[package]
name = "unfuck-curseforge"
version = "0.1.1"
edition = "2021"
build = "build.rs"  # Add this line

[dependencies]
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5.21", features = ["derive", "wrap_help", "help", "usage", "suggestions", "color", "error-context", "string"] }

tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
include_dir = {version = "0.7.4"}
curseforge_pack_downloader = {path= "curseforge_pack_downloader" }