[package]
name = "curseforge-pack-downloader-app"
version = "1.0.2"
description = "The CurseForge Pack Downloader App is a cross-platform tool built with Tauri. It allows users to download and manage Minecraft mod packs directly from CurseForge, providing a seamless and user-friendly interface."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "curseforge_pack_downloader_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.22"
env_logger = "0.11.5"
reqwest = { version = "0.12.9", features = ["json"] }
curseforge_pack_downloader = { path = "../../curseforge_pack_downloader/" }
